--- a/values.yaml
+++ b/values.yaml
@@ -1,12 +1,24 @@
-name: new-app-harness-example
+name: harness-example
 replicas: 1
 
-secretName: my-secret
+schedule: "*/1 * * * *"
 
+cronJobs:
+  1: job1
+  2: job2
+  3: job3
+
+image: ${artifact.metadata.image}
+dockercfg: ${artifact.source.dockerconfig}
 createNamespace: true
 namespace: ${infra.kubernetes.namespace}
 
+serviceType: LoadBalancer
+servicePort: 80
+serviceTargetPort: 80
+
 env:
+  config:
+    key1: value1
   secrets:
-    username: user
-    password: pass
+    key2: value2
