--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.name}}-svc
+  name: {{.Values.serviceName}}-svc
 spec:
   type: {{.Values.serviceType}}
   ports:
