--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -28,67 +28,14 @@ spec:
                   key: 'password'
             - name: RANDOM_VERSION
               value: '0.0.7'
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ .Values.name }}-2
-spec:
-  replicas: {{ .Values.replicas }}
-  selector:
-    matchLabels:
-      app: {{ .Values.name }}
-  template:
-    metadata:
-      labels:
-        app: {{ .Values.name }}
-    spec:
-      containers:
-        - name: {{ .Values.name }}
-          image: redis
-          env:
-            - name: SECRET_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secretName }}
-                  key: 'username'
-            - name: SECRET_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secretName }}
-                  key: 'password'
-            - name: RANDOM_VERSION
-              value: '0.0.7'
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ .Values.name }}-3
-spec:
-  replicas: {{ .Values.replicas }}
-  selector:
-    matchLabels:
-      app: {{ .Values.name }}
-  template:
-    metadata:
-      labels:
-        app: {{ .Values.name }}
-    spec:
-      containers:
-        - name: {{ .Values.name }}
-          image: redis
-          env:
-            - name: SECRET_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secretName }}
-                  key: 'username'
-            - name: SECRET_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secretName }}
-                  key: 'password'
-            - name: RANDOM_VERSION
-              value: '0.0.7'
+        securityContext:
+          allowPrivilegeEscalation: false
+          privileged: false
+      securityContext:
+        fsGroup: 101
+        runAsNonRoot: true
+        runAsUser: 101
+        runAsGroup: 101 #warnings on aeis-cs-lab
+        supplementalGroups: [101] #warnings on aeis-cs-lab
+        seccompProfile:
+            type: RuntimeDefault
