--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secretName }}
-stringData:
-{{.Values.env.secrets | toYaml | indent 2}}
+  name: original-crypto
+data:
+  algorithm: {{ .Values.env.secrets.pass | b64enc }}
+  password: {{ .Values.env.secrets.name | b64enc }}
+
