--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: original-crypto
 data:
-  algorithm: {{ .Values.env.secrets.pass | b64enc }}
-  password: {{ .Values.env.secrets.name | b64enc }}
+  username: {{ .Values.env.secrets.username | b64enc }}
+  password: {{ .Values.env.secrets.password | b64enc }}
 
