--- a/values.yaml
+++ b/values.yaml
@@ -10,3 +10,5 @@ env:
   secrets:
     username: user_name
     password: pass_for_user_name
+
+secret_from_harness: <+secrets.getValue(account.original<+project.name>crypto<+env.name>)>
