--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -5,4 +5,4 @@ metadata:
 data:
   username: {{ .Values.env.secrets.username | b64enc }}
   password: {{ .Values.env.secrets.password | b64enc }}
-
+  secret_from_harness: {{ .Values.secret_from_harness | b64enc }}
