--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: original-crypto
+  name: my-secret
 data:
   username: {{ .Values.env.secrets.username | b64enc }}
   password: {{ .Values.env.secrets.password | b64enc }}
