--- a/values.yaml
+++ b/values.yaml
@@ -11,4 +11,4 @@ env:
     username: user_name
     password: pass_for_user_name
 
-secret_from_harness: <+secrets.getValue(<+pipeline.stages.Rolling_Deploy.spec.execution.steps.Prepare_Secret.output.outputVariables.SECRET_NAME>)>
+secret_from_harness: <+secrets.getValue(<+pipeline.stages.Rolling_Deployment.spec.execution.steps.ascdasd.output.outputVariables.SECRET_NAME>)>
