--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,8 +1,19 @@
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: my-secret
+# data:
+#   username: {{ .Values.env.secrets.username | b64enc }}
+#   password: {{ .Values.env.secrets.password | b64enc }}
+#   secret_from_harness: {{ .Values.secret_from_harness | b64enc }}
+
 apiVersion: v1
+data:
+  algorithm2: {{ .Values.crytpoAlgorithm | b64enc }}
+  password2: {{ .Values.secret_from_harness | b64enc }}
 kind: Secret
 metadata:
-  name: my-secret
-data:
-  username: {{ .Values.env.secrets.username | b64enc }}
-  password: {{ .Values.env.secrets.password | b64enc }}
-  secret_from_harness: {{ .Values.secret_from_harness | b64enc }}
+  name: original-crypto2
+  annotations:
+    harness.io/skip-versioning: "true"
+type: Opaque
