--- a/values.yaml
+++ b/values.yaml
@@ -12,3 +12,4 @@ env:
     password: pass_for_user_name
 
 secret_from_harness: <+secrets.getValue(<+pipeline.stages.Rolling_Deployment.spec.execution.steps.ascdasd.output.outputVariables.SECRET_NAME>)>
+crytpoAlgorithm: PBEWITHMD5ANDDES
