--- a/values.yaml
+++ b/values.yaml
@@ -1,10 +1,12 @@
 name: new-app-harness-example
-replicas: 1
+replicas: 6
+replicasNew: 4
+replicasNewNew: 2
 
 secretName: my-secret
 
 createNamespace: true
-namespace: ${infra.kubernetes.namespace}
+namespace: pedro
 
 env:
   secrets:
