--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,8 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotation:
+    harness.io/direct-apply: "true"
   name: {{ .Values.name }}-2
 spec:
   replicas: {{ .Values.replicasNew }}
@@ -65,6 +67,8 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotation:
+    harness.io/direct-apply: "true"
   name: {{ .Values.name }}-3
 spec:
   replicas: {{ .Values.replicasNewNew }}
