--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,3 +18,12 @@ spec:
         image: nginx:1.21.6-alpine
         ports:
         - containerPort: 80
+###### Mount the config map
+        volumeMounts:
+          - name: mnt
+            mountPath: /usr/share/nginx/html/index.html
+            subPath: file-from-cfgmap
+      volumes:
+      - name: mnt
+        configMap:
+          name: nginx-cfgmap
