--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,11 +19,13 @@ spec:
         ports:
         - containerPort: 80
 ###### Mount the config map
-        volumeMounts:
-          - name: mnt
-            mountPath: /usr/share/nginx/html/index.html
-            subPath: file-from-cfgmap
       volumes:
-      - name: mnt
-        configMap:
-          name: nginx-cfgmap
+      - emptyDir: {}
+        name: log-storage
+#       - name: mnt
+#         configMap:
+#           name: nginx-cfgmap
+#         volumeMounts:
+#           - name: mnt
+#             mountPath: /usr/share/nginx/html/index.html
+#             subPath: file-from-cfgmap
