--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,6 +1,13 @@
-apiVersion: v1
-kind: Secret
+# Source: backend-log-server/templates/hpa.yaml
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Values.secretName }}
-stringData:
-{{.Values.env.secrets | toYaml | indent 2}}
+  name: golden-qa-backend-log-server
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: nginx
+  minReplicas: 2
+  maxReplicas: 2
+  targetCPUUtilizationPercentage: 70
