--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 name: new-app-harness-example
 replicas: 1
 
-secretName: my-secret
+secretName: my-secrett
 
 createNamespace: true
 namespace: ${infra.kubernetes.namespace}
